--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 RESEND_API_KEY=re_YOUR_API_KEY_HERE
 CONTACT_EMAIL=brsteele2123@gmail.com
+RESEND_SENDING_DOMAIN=contact.philthebuilderandfriends.com
